test/valid/new-simple.js
function Foo() {} 
var z = new Foo();
