test/invalid/undefined.js
function getUndefined() {}
var x = getUndefined();
x = 3;
